force-app/main/default/objects/ccrz__E_Content__c/ccrz__E_Content__c.object-meta.xml
<CustomObject>
    <description>Content object to display main home page, faq, etc. based on the Storefront and Locale. Very similar to Custom Labels with a larger body of text.</description>
    <label>CC Content</label>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>