force-app/main/default/objects/ccrz__E_Content__c/fields/ccrz__ContentBody__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ContentBody__c</fullName>
    <description>The HTML for this particular E_Content object</description>
    <label>Content Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>