force-app/main/default/objects/ccrz__E_Content__c/fields/ccrz__ContentID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ContentID__c</fullName>
    <description>ID for this particular E_Content object.  ID should describe what this content object represents.  E.g. body for home page body, faq for FAQ link, etc.  There can be multiple objects with the same ID, but must be unique across the storefront/locale.</description>
    <label>Content ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>