force-app/main/default/objects/ccrz__E_Content__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__ContentID__c</columns>
    <columns>ccrz__Locale__c</columns>
    <columns>ccrz__Storefront__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>